# Ztarry

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: curses.h  curses_compat.cpp  main.cpp
src/installer/: main.cpp
